--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
       <div class="botoes">
-        <button class="botao">Cursos na Alura</button>
-        <button class="botao">Criar projetos em Javascript</button>
-        <button class="botao">Criar um portfolio</button>
+        <button class="botao">Fazer cursos</button>
+        <button class="botao">Comprar uma câmera fotografica</button>
+        <button class="botao">Começar a tirar fotos</button>
         <button class="botao">Atualizar meu currículo</button>
       </div>
     </section>
